--- a/product/carbon-home/conf/identity/domain-config.yml
+++ b/product/carbon-home/conf/identity/domain-config.yml
@@ -18,25 +18,39 @@ domains:
   name: "PRIMARY"
   priority: 1
   uniqueIdResolver:
-   type: "JDBC-UUID-RESOLVER"
+   type: "JDBCUniqueIdResolver"
    properties:
     dataSource: "WSO2_CARBON_DB"
+
   identityStoreConnectors:
   -
    connectorId: "JDBCIS1"
+   connectorType: "JDBCIdentityStore"
+   properties:
+     dataSource: "WSO2_CARBON_DB"
+     hashAlgorithm: "SHA256"
+     databaseType: "MySQL"
+     connectorUserId: "username"
+     connectorGroupId: "groupname"
    attributeMappings:
    -
-    claimURI: "http://wso2.org/claims/username"
     attribute: "username"
+    claimUri: "http://wso2.org/claims/username"
+    properties:
+     required: "true"
    -
-    claimURI: "http://wso2.org/claims/email"
     attribute: "email"
+    claimUri: "http://wso2.org/claims/email"
    -
-    claimURI: "http://wso2.org/claims/firstName"
     attribute: "firstname"
+    claimUri: "http://wso2.org/claims/firstName"
    -
-    claimURI: "http://wso2.org/claims/lastName"
     attribute: "lastname"
+    claimUri: "http://wso2.org/claims/lastName"
   credentialStoreConnectors:
   -
-   connectorId: "JDBCCS1"
+    connectorId: "JDBCCS1"
+    connectorType: "JDBCCredentialStore"
+    properties:
+      dataSource: "WSO2_CARBON_DB"
+      databaseType: "MySQL"
