--- a/product/pom.xml
+++ b/product/pom.xml
@@ -171,6 +171,16 @@
             <artifactId>org.wso2.carbon.security.userstore.jdbc.feature</artifactId>
             <type>zip</type>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.inbound.provisioning.scim2</groupId>
+            <artifactId>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</artifactId>
+            <type>zip</type>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity.inbound.provisioning.scim2</groupId>
+            <artifactId>org.wso2.carbon.identity.inbound.provisioning.scim2.provider.feature</artifactId>
+            <type>zip</type>
+        </dependency>
 
         <!-- Sample Simple Authentication Component -->
 
@@ -397,6 +407,14 @@
                                     <id>org.wso2.carbon.uuf.sample.pets-store.feature</id>
                                     <version>${carbon.uuf.version}</version>
                                 </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</id>
+                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.provider.feature</id>
+                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
+                                </feature>
                             </features>
                         </configuration>
                     </execution>
@@ -536,6 +554,14 @@
                                 <feature>
                                     <id>org.wso2.carbon.uuf.sample.pets-store.feature</id>
                                     <version>${carbon.uuf.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.common.feature</id>
+                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
+                                </feature>
+                                <feature>
+                                    <id>org.wso2.carbon.identity.inbound.provisioning.scim2.provider.feature</id>
+                                    <version>${org.wso2.carbon.identity.inbound.provisioning.scim2.version}</version>
                                 </feature>
                             </features>
                         </configuration>
