--- a/pom.xml
+++ b/pom.xml
@@ -1149,6 +1149,11 @@
                 <artifactId>org.wso2.carbon.tenant.mgt.stub</artifactId>
                 <version>${carbon.multitenancy.version}</version>
             </dependency>
+            <dependency>
+                <groupId>commons-pool.wso2</groupId>
+                <artifactId>commons-pool</artifactId>
+                <version>${commons.pool.wso2.version}</version>
+            </dependency>
 
             <!-- Outbound Authenticators -->
             <dependency>
@@ -1573,6 +1578,7 @@
         <commons.codec.version>1.8</commons.codec.version>
         <XmlSchema.version>1.4.7.wso2v3</XmlSchema.version>
         <wsdl4j.version>1.6.2.wso2v2</wsdl4j.version>
+        <commons.pool.wso2.version>1.5.6.wso2v1</commons.pool.wso2.version>
     </properties>
 
     <repositories>
