--- a/pom.xml
+++ b/pom.xml
@@ -906,9 +906,9 @@
                 <version>${identity.user.account.association.version}</version>
             </dependency>
             <dependency>
-                <groupId>org.wso2.carbon.identity.governance</groupId>
+                <groupId>org.wso2.carbon.identity.framework</groupId>
                 <artifactId>org.wso2.carbon.identity.governance.stub</artifactId>
-                <version>${identity.governance.version}</version>
+                <version>${carbon.identity.framework.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity.governance</groupId>
@@ -1400,7 +1400,7 @@
     <properties>
 
         <!--Carbon Identity Framework Version-->
-        <carbon.identity.framework.version>5.6.14</carbon.identity.framework.version>
+        <carbon.identity.framework.version>5.6.23</carbon.identity.framework.version>
 
         <!--Identity Repo Versions-->
         <identity.carbon.auth.saml2.version>5.1.5</identity.carbon.auth.saml2.version>
@@ -1427,8 +1427,8 @@
         <identity.data.publisher.audit.version>0.1.1</identity.data.publisher.audit.version>
         <!--<identity.carbon.auth.thrift.version>5.5.0-SNAPSHOT</identity.carbon.auth.thrift.version>-->
         <!--<identity.application.auth.oidc.version>5.1.2-SNAPSHOT</identity.application.auth.oidc.version>-->
-        <identity.governance.version>0.1.11</identity.governance.version>
-        <carbon.identity.auth.version>0.1.3</carbon.identity.auth.version>
+        <identity.governance.version>0.1.14</identity.governance.version>
+        <carbon.identity.auth.version>0.1.10</carbon.identity.auth.version>
         <identity.event.handler.account.lock.version>1.0.0</identity.event.handler.account.lock.version>
         <identity.event.handler.notification.version>0.1.3</identity.event.handler.notification.version>
         <identity.app.authz.xacml.version>0.1.0</identity.app.authz.xacml.version>
