Fix pom warnings and add scim related fixes
Conflicts:
	pom.xml
	product/carbon-home/resources/h2-test-data/test-data.sql
	product/pom.xml

--- a/portal/user/osgi-service/org.wso2.is.portal.user.client.profile/pom.xml
+++ b/portal/user/osgi-service/org.wso2.is.portal.user.client.profile/pom.xml
@@ -82,7 +82,7 @@
                         <Private-Package>org.wso2.carbon.user.profile.internal.*</Private-Package>
                         <Export-Package>
                             !org.wso2.carbon.user.profile.internal.*,
-                            org.wso2.carbon.user.profile.*;version="${version}"
+                            org.wso2.carbon.user.profile.*;version="${project.version}"
                         </Export-Package>
                         <Bundle-Activator>
                             org.wso2.carbon.user.profile.internal.Activator
